--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="nav-logo-container">
-                <img src="/public/WhatsApp Image 2025-10-21 at 7.06.21 PM.jpeg" alt="Advaith H S"
+                <img src="public/WhatsApp Image 2025-10-21 at 7.06.21 PM.jpeg" alt="Advaith H S"
                     class="nav-photo hidden" />
                 <a href="#home" class="nav-logo">Advaith HS</a>
             </div>
@@ -468,5 +468,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
