--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="hero-content">
                 <h1 class="hero-name">Advaith HS</h1>
                 <div class="photo">
-                    <img src="/public/WhatsApp Image 2025-10-21 at 7.06.21 PM.jpeg" alt="Advaith H S"
+                    <img src="public/WhatsApp Image 2025-10-21 at 7.06.21 PM.jpeg" alt="Advaith H S"
                         class="hero-photo fade-in">
                     <p class="hero-title">
                         <span id="typed-text"></span><span class="cursor"></span>
@@ -471,3 +471,4 @@
 
 
 </html>
+
