--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <!-- Project 1: Project Management Tool -->
                 <div class="project-card fade-in">
                     <div class="project-image-container">
-                        <img src="/public/Screenshot 2025-11-02 180603.png" alt="Project Management Tool"
+                        <img src="public/Screenshot 2025-11-02 180603.png" alt="Project Management Tool"
                             class="project-image">
                         <div class="image-overlay">
                             <a href="https://github.com/advaithsridhar/Project-Management-Tool" target="_blank"
@@ -471,4 +471,5 @@
 
 
 </html>
+
 
