--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
                 <div class="project-card fade-in">
                     <div class="project-image-container">
-                        <img src="/public/Screenshot 2025-11-02 180418.png" alt="Movie Explorer Web App"
+                        <img src="public/Screenshot 2025-11-02 180418.png" alt="Movie Explorer Web App"
                             class="project-image">
                         <div class="image-overlay">
                             <a href="https://github.com/advaithsridhar/SourceHubIT_MovieSearchApp" target="_blank"
@@ -471,5 +471,6 @@
 
 
 </html>
+
 
 
